// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`omitWhen > when conditional is falsy > boolean conditional > should include all fields inside the omitWhen block in the result object 1`] = `
{
  "field_1": {
    "errorCount": 1,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 2,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_2": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_3": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_4": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
}
`;

exports[`omitWhen > when conditional is falsy > boolean conditional > should run tests normally 1`] = `
{
  "field_1": {
    "errorCount": 1,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 2,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_2": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_3": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_4": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
}
`;

exports[`omitWhen > when conditional is falsy > boolean conditional > should run tests normally 2`] = `
{
  "field_1": {
    "errorCount": 1,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 2,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_2": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_3": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_4": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 1,
    "valid": true,
    "warnCount": 0,
    "warnings": [],
  },
}
`;

exports[`omitWhen > when conditional is falsy > function conditional > should include all fields inside the omitWhen block in the result object 1`] = `
{
  "field_1": {
    "errorCount": 1,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 2,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_2": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_3": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_4": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
}
`;

exports[`omitWhen > when conditional is falsy > function conditional > should run tests normally 1`] = `
{
  "field_1": {
    "errorCount": 1,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 2,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_2": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_3": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_4": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
}
`;

exports[`omitWhen > when conditional is falsy > function conditional > should run tests normally 2`] = `
{
  "field_1": {
    "errorCount": 1,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 2,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_2": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_3": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 0,
    "valid": false,
    "warnCount": 0,
    "warnings": [],
  },
  "field_4": SummaryBase {
    "errorCount": 0,
    "errors": [],
    "pendingCount": 0,
    "success": [],
    "successCount": 0,
    "testCount": 1,
    "valid": true,
    "warnCount": 0,
    "warnings": [],
  },
}
`;

exports[`omitWhen > when conditional is truthy > boolean conditional > should avoid running the omitted tests 1`] = `
{
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryItem {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 2,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`omitWhen > when conditional is truthy > boolean conditional > should skip and not run omitted fields when no field filter is provided 1`] = `
{
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryItem {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 2,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`omitWhen > when conditional is truthy > function conditional > should avoid running the omitted tests 1`] = `
{
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryItem {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 2,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`omitWhen > when conditional is truthy > function conditional > should skip and not run omitted fields when no field filter is provided 1`] = `
{
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryItem {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 2,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;
